--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
         </div>
 
         <div class="hidden" id="reportSection">
-            <button class="back-btn" id="backBtn">🔙 העלה מסמך חדש</button>
-            <iframe id="reportFrame" style="width: 100%; height: 800px; border: none; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);"></iframe>
-        </div>
+    <button class="back-btn" id="backBtn">🔙 העלה מסמך חדש</button>
+    <div id="reportContainer" style="background: white; border-radius: 15px; padding: 25px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); min-height: 700px; line-height: 1.6;">
+        <h2 style="text-align: center; margin-bottom: 20px;">דוח ניהול סיכונים</h2>
+        <div id="reportContent"></div>
     </div>
+</div>
 
     <script>
         // DOM Elements
